--- a/css/style.scss
+++ b/css/style.scss
@@ -264,6 +264,7 @@ button.btn, input.btn {
     }
     max-width: 128px; /* Set the maximum width as per your requirement */
     height: auto;
+    margin: 0 auto;
   }
   .content {
     margin-top: 5em;
